--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/index_topbanner_3.jpg" alt="Hoschoc formula">
+      <img src="images/index_topbanner_10.jpg" alt="iso 22716 & iso 9001">
       <div class="carousel-caption">
       </div>
       </div>
@@ -98,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
       <div class="item">
-      <img src="images/index_topbanner_7.jpg" alt="Hoschoc formula"  class="indeximage">
+      <img src="images/index_topbanner_3.jpg" alt="Hoschoc formula"  class="indeximage">
       <div class="carousel-caption">
       </div>
     </div>
@@ -182,27 +182,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3><strong>NEWS</strong></h3>
             
         </div>
+              <div class="col-xs-12 col-md-4 indexnews">
+            <a href="news.html" style="text-decoration:none; color:black;">
+               <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/7/2</h4>
+            <h5>Our factory is ISO22716 & ISO9001 certified!<br>
+             </h5>
+            </a></div>
+             <div class="col-xs-12 col-md-4 indexnews">
+            <a href="news.html" style="text-decoration:none; color:black;"> 
+            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
+                2018/5/8-10</h4>
+            <h5>beautyworld MIDDLE EAST<br>
+                SA-B18</h5>
+            </a></div>
            <div class="col-xs-12 col-md-4 indexnews">
             <a href="news.html" style="text-decoration:none; color:black;"> 
             <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
                 2018/3/16-19</h4>
             <h5>COSMOPROF WORLDWIDE BOLOGNA<br>
                 Hall 29A Booth B2</h5>
-            </a></div>
-            <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;"> 
-            <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/12</h4>
-            <h5>Merry Christmas!<br>
-                and Happy New Year</h5>
-            </a></div>
-        <div class="col-xs-12 col-md-4 indexnews">
-            <a href="news.html" style="text-decoration:none; color:black;">
-               <h4> <span class="glyphicon glyphicon-play" aria-hidden="true" style="color:red"></span>
-                2017/11/14-16</h4>
-            <h5>COSMOPACK ASIA HONG KONG<br>
-                Hall 3-D23</h5>
-        
             </a></div>
     </div></div>
 
